Fix T78573: Crash when removing strips with prefetching

Stop prefetching before changing content of seqbase.

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D8256